--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,22 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- New theme color -->
-    <color name="colorPrimary">#3D1856</color>
-    <color name="colorPrimaryVariant">#662F91</color>
-    <color name="colorOnPrimary">#FFFFFF</color>
-    <color name="colorSecondary">#00BFA5</color>
-    <color name="colorSecondaryVariant">#018786</color>
-    <color name="colorOnSecondary">#FFFFFF</color>
-    <color name="colorBlack">#000000</color>
-    <color name="colorWhite">#FFFFFF</color>
-
-    <!-- Dark theme colors -->
-    <color name="colorPrimaryDark">#9161A5</color>
-    <color name="colorPrimaryVariantDark">#4A0072</color>
-    <color name="colorOnPrimaryDark">#FFFFFF</color>
-    <color name="colorSecondaryDark">#03DAC5</color>
-    <color name="colorSecondaryVariantDark">#018786</color>
-    <color name="colorOnSecondaryDark">#FFFFFF</color>
-    <color name="colorBlackDark">#FFFFFF</color>
-    <color name="colorWhiteDark">#000000</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
 </resources>
