--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -12,7 +12,7 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         app:civ_border_width="2dp"
-        app:civ_border_color="?attr/colorPrimary"
+        app:civ_border_color="?attr/colorPrimaryVariant"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/avatars" />
