--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="purple_200">#FFA291E8</color>
     <color name="purple_500">#FF6F35A5</color>
-    <color name="purple_700">#FF5E2A8C</color>
+    <color name="purple_700">#8963C7</color>
     <color name="teal_200">#FF009688</color>
     <color name="teal_700">#FF00796B</color>
     <color name="black">#FF000000</color>
