neaten up detailUser Act

--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -33,8 +33,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:textStyle="bold"
         android:textColor="?attr/colorPrimary"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_detail_photo" />
@@ -54,17 +54,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintEnd_toStartOf="@+id/gl_detail_center"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/tv_detail_username"
         app:layout_constraintTop_toBottomOf="@+id/tv_detail_username" />
 
     <TextView
         android:id="@+id/tv_detail_following"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="@+id/gl_detail_center"
+        app:layout_constraintStart_toEndOf="@+id/tv_detail_username"
         app:layout_constraintTop_toBottomOf="@+id/tv_detail_username" />
 
     <com.google.android.material.tabs.TabLayout
@@ -75,7 +75,7 @@
         android:contentDescription="@string/tab_detail_desc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/gl_detail_for_tabs" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_detail_following" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_detail"
@@ -85,19 +85,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tabs_detail" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_detail_center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="205dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_detail_for_tabs"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="210dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
