--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -11,6 +11,12 @@
             app:actionViewClass="androidx.appcompat.widget.SearchView"
             app:showAsAction="collapseActionView|always" />
 
+        <item
+            android:id="@+id/menu_favorite"
+            android:icon="@drawable/ic_favorite_24"
+            android:title="@string/favorite"
+            app:showAsAction="always"/>
+
     </group>
 
 </menu>
