--- a/app/src/main/res/layout-land/activity_detail_user.xml
+++ b/app/src/main/res/layout-land/activity_detail_user.xml
@@ -35,7 +35,7 @@
             android:id="@+id/constraint_detail_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -126,8 +126,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="@string/add_favorite"
                     android:drawableLeft="@drawable/ic_favorite_border_24"
+                    android:textColor="@color/white"
+                    android:text="@string/add_favorite"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/constraint_detail_follows"
